config/kustomize/envoy-config.yaml
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: AUTO
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: backend_default
                      domains:
                        - "backend.default.svc.cluster.local"
                        - "backend-s0.default.svc.cluster.local"
                        - "backend.default.svc"
                        - "backend.default"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: backend_default
                            timeout: 600s
                            retry_policy:
                              retry_on: "connect-failure,refused-stream,reset-before-request"
                              retry_back_off:
                                base_interval: 0.25s
                                max_interval: 10s
                              num_retries: 60
                              per_try_timeout: 10s
                              host_selection_retry_max_attempts: 60

                http_filters:
                  - name: envoy.filters.http.ext_proc
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.ext_proc.v3.ExternalProcessor
                      grpc_service:
                        envoy_grpc:
                          cluster_name: external_processor_cluster
                      processing_mode:
                        request_header_mode: SEND
                        request_body_mode: NONE
                        request_trailer_mode: SKIP
                        response_header_mode: SKIP
                        response_body_mode: NONE
                        response_trailer_mode: SKIP
                  - name: envoy.filters.http.buffer
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.buffer.v3.Buffer
                      max_request_bytes: 5242880   # buffer size bytes
                  #                      max_request_time: 120s       # hold request for up to X seconds
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: external_processor_cluster
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      http2_protocol_options: {}
      load_assignment:
        cluster_name: external_processor_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: s0.s0-system.svc
                      port_value: 50051
    - name: backend_default
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      dns_refresh_rate: 1s
      health_checks:
        - timeout: 1s
          interval: 5s
          unhealthy_threshold: 3
          healthy_threshold: 2
          http_health_check:
            path: "/health"
      load_assignment:
        cluster_name: backend_default
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: backend.default.svc
                      port_value: 8080
